Fix cosmetics width being too big on achievements screen (#1332)

--- a/client/src/app/main-menu/achievements.module.scss
+++ b/client/src/app/main-menu/achievements.module.scss
@@ -312,7 +312,6 @@
 			filter: drop-shadow(0 2px 0 hsla(0deg, 0%, 0%, 35%));
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			width: 40ch;
 			overflow: hidden;
 		}
 
